# osdrive

./: .env.example  .gitignore  Cargo.toml  DUMP  README.md  TODO  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.github/workflows/: cd.yml  ci.yml
.zed/: settings.json
apps/desktop/: Cargo.toml
apps/desktop/desktop/: ContentView.swift  desktopApp.swift
apps/desktop/desktop.xcodeproj/: project.pbxproj
apps/desktop/desktop.xcodeproj/project.xcworkspace/xcuserdata/oscar.xcuserdatad/: UserInterfaceState.xcuserstate
apps/desktop/desktop.xcodeproj/xcuserdata/oscar.xcuserdatad/xcschemes/: xcschememanagement.plist
apps/desktop/desktopTests/: desktopTests.swift
apps/desktop/desktopUITests/: desktopUITestsLaunchTests.swift
apps/desktop/macos/: build-rust-share.sh  build-rust.sh
apps/desktop/macos/OSDrive.xcodeproj/: project.pbxproj
apps/desktop/macos/OSDrive.xcodeproj/xcshareddata/xcschemes/: OSDrive.xcscheme  vfs.xcscheme
apps/desktop/macos/OpenDrive.xcodeproj/: project.pbxproj
apps/desktop/macos/OpenDrive.xcodeproj/xcshareddata/xcschemes/: OpenDrive.xcscheme  vfs.xcscheme
apps/desktop/macos/desktop/: Info.plist  desktop.entitlements
apps/desktop/macos/desktop.xcodeproj/: project.pbxproj
apps/desktop/macos/desktop.xcodeproj/xcshareddata/xcschemes/: desktop.xcscheme  vfs.xcscheme
apps/desktop/macos/desktop/icon-dark.icon/: icon.json
apps/desktop/macos/desktop/icon-light.icon/: icon.json
apps/desktop/macos/desktopTests/: desktopTests.swift
apps/desktop/macos/desktopUITests/: desktopUITests.swift
apps/desktop/macos/share/: Info.plist  OSDriveShareFFI.h  OpenDriveShareFFI.h  Share-Bridging-Header.h  ShareViewController.swift
apps/desktop/macos/vfs/: FileProviderEnumerator.swift  FileProviderExtension.swift  FileProviderItem.swift  Info.plist  VFS-Bridging-Header.h  vfs.entitlements
apps/desktop/macos/vfs/Assets.xcassets/OSDriveSidebar.symbolset/: Contents.json
apps/desktop/macos/vfs/icon-light.icon/: icon.json
apps/desktop/src/: assets.rs  components.rs  file_provider.rs  index.rs  lib.rs  main.rs  permissions.rs  provider_window.rs  share_upload.rs  state.rs  vfs_model.rs  window.rs
apps/desktop/src/components/: button.rs  data_table.rs  icon.rs  image.rs  path_bar.rs  quick_preview.rs  sidebar.rs  status_bar.rs  table_row.rs  text_input.rs
apps/desktop/vfs/: FileProviderEnumerator.swift  FileProviderExtension.swift  FileProviderItem.swift  Info.plist  vfs.entitlements
apps/opendrive/: Cargo.toml
apps/opendrive/src/: main.rs
apps/web/: .dev.vars.example  components.json  drizzle.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  wrangler.jsonc
apps/web/drizzle/: 0000_cultured_tyger_tiger.sql  0001_spotty_drive_browser.sql
apps/web/infra/: bootstrap.yaml  cloudformation.yaml  deployment.yaml  infra.yaml  setup.yaml
apps/web/src/: app.css  app.tsx  entry-client.tsx  entry-server.tsx  env.d.ts  worker-configuration.d.ts
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/db/: Cargo.toml
crates/db/examples/: ingest_paths.rs  print_paths.rs
crates/db/src/: builder.rs  error.rs  format.rs  lib.rs  path.rs  reader.rs
crates/db/tests/: roundtrip.rs
crates/indexer/: Cargo.toml
crates/transfer/: Cargo.toml
crates/transfer/src/: lib.rs  native.rs  wasm.rs
gpuidrive/: Cargo.toml
gpuidrive/src/components/: data_table.rs  text_input.rs
indexer2/: Cargo.toml  TODO
indexer2/src/: main.rs
web/: pnpm-lock.yaml  vite.config.ts  wrangler.jsonc
web/src/: worker-configuration.d.ts
(+131 files in other folders)
