[package]
name = "opendrive"
authors = ["Oscar Beaumont <oscar@otbeaumont.me>"]
version = "0.0.0"
edition = "2024"
publish = false

[package.metadata.packager]
before-packaging-command = "cargo build --release"

[dependencies]
gpui = "0.2.2"
anyhow = "1.0.98"
env_logger = "0.11.8"
futures = "0.3.31"
rand = "0.9.1"
unicode-segmentation = "1.12.0"
chrono = "0.4.40"
human_bytes = "0.4.3"
opener = "0.7.2"
clap = { version = "4.5.37", features = ["derive"] }
od-db = { path = "../../crates/db" }
od-indexer = { path = "../../crates/indexer" }
libc = "0.2.184"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.2"
objc2 = "0.6.4"
objc2-file-provider = { version = "0.3.2", features = ["Extension", "NSFileProviderDomain", "block2"] }
objc2-foundation = "0.3.2"
