[package]
name = "od-transfer"
version = "0.0.0"
edition = "2024"
publish = false

[lib]
crate-type = ["rlib", "cdylib"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12.15", default-features = false, features = ["rustls-tls"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = "0.6.0"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
js-sys = "0.3.77"
